--- a/packages/components/menu/src/menu.scss
+++ b/packages/components/menu/src/menu.scss
@@ -3,7 +3,7 @@
   border: none;
   border: var(--sl-size-borderWidth-default) solid var(--sl-color-border-plain);
   border-radius: var(--sl-size-borderRadius-default);
-  box-shadow: var(--sl-elevation-shadow-md);
+  box-shadow: var(--sl-elevation-shadow-overflow);
   box-sizing: border-box;
   color: var(--sl-color-foreground-plain);
   display: none;
